# pyiak_instr

./: .gitignore  LICENSE.txt  mypy.ini  noxfile.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.config/: .pylintrc  mypy.ini
.github/workflows/: main.yml
lib/rwfile/: __init__.py  _rwconfig.py  _rwexcel.py
pyiak_instr/: __init__.py
pyiak_instr/core/: __init__.py
pyiak_instr/exceptions/: _log.py  _rwfile.py
pyiak_instr/log/: _utils.py
pyiak_instr/osutils/: __init__.py
pyiak_instr/rwfile/: _core.py  _rwsqllite.py
pyiak_instr/utilities/: _nums.py
pyiak_instr_deprecation/communication/: __init__.py
pyiak_instr_deprecation/core/: _codes.py
pyiak_instr_deprecation/log/: _work.py
pyiak_instr_deprecation/rwfile/: __init__.py  _rwconfig.py  _rwsqllite.py
pyiak_instr_deprecation/store/: __init__.py  _base.py
pyiak_instr_deprecation/utilities/: __init__.py  _converters.py
pyinstr_iakoster/: __init__.py
pyinstr_iakoster/communication/: __init__.py  _con.py  _field.py  _fields.py  _mess.py  _msg.py  _pf.py  _regs.py
pyinstr_iakoster/core/: __init__.py  _codes.py  _support_classes.py
pyinstr_iakoster/exceptions/: __init__.py  _base.py  _comm.py  _log.py  _rwfile.py
pyinstr_iakoster/log/: __init__.py  _log_utils.py  _log_work.py  _work.py
pyinstr_iakoster/rwfile/: __init__.py  _core.py  _exception.py  _rwbin.py  _rwconfig.py  _rwexcel.py  _rwf_exception.py  _rwf_utils.py  _rwnosql.py  _rwsqllite.py  _utils.py
pyinstr_iakoster/storage/: _ds.py  (+1 more)
tests/: env_vars.py  runner.py  utils.py
tests_deprecated/: env_vars.py  runner.py
(+240 files in other folders)
