[metadata]
name = pyinstr_iakoster
author = Ivan Kosternoi
author_email = ivan.kosternoi@gmail.com
description =
    pyinstr_iakoster is a Python library with instruments for various tasks.
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10